@@ -27,3 +27,9 @@ parts +=
 recipe = zc.recipe.egg
 eggs = munin.zope
 arguments = http_address=${instance:http-address}, user='${instance:user}'
+
+[munin2]
+recipe = zc.recipe.egg
+eggs = munin.zope
+scripts = munin=munin2
+arguments = http_address=${instance:http-address}, secret='changethisplz'
